--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "27.0.3"
 
     defaultConfig {
-        applicationId "com.suleiman.material"
+        applicationId "com.ndroidpro.material"
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
